Issues...Country picker added...

--- a/Wizcard/Wizcard/OnBoarding/Base.lproj/Onboarding.storyboard
+++ b/Wizcard/Wizcard/OnBoarding/Base.lproj/Onboarding.storyboard
@@ -428,6 +428,9 @@ of you before you event extend your hand.</string>
                                         <state key="normal" title="+91">
                                             <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="selectCountryButtonClicked:" destination="8Uj-lw-kNp" eventType="touchUpInside" id="lam-oJ-I2P"/>
+                                        </connections>
                                     </button>
                                     <view alpha="0.20000000298023224" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l9C-Gn-yFw">
                                         <rect key="frame" x="56" y="0.0" width="1" height="55"/>
@@ -494,86 +497,37 @@ of you before you event extend your hand.</string>
                                 <color key="currentPageIndicatorTintColor" red="0.094117647060000004" green="0.63137254899999995" blue="0.74509803919999995" alpha="1" colorSpace="calibratedRGB"/>
                             </pageControl>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lie-CS-pFP">
-                                <rect key="frame" x="68" y="189" width="240" height="290"/>
+                                <rect key="frame" x="0.0" y="189" width="375" height="290"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g6j-w4-Icj" customClass="BorderView">
-                                        <rect key="frame" x="0.0" y="0.0" width="240" height="230"/>
-                                        <subviews>
-                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="46" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4m6-5l-ae2">
-                                                <rect key="frame" x="0.0" y="0.0" width="240" height="230"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                <prototypes>
-                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CountryCell" id="fsw-yO-6Ka" customClass="CountryTableViewCell">
-                                                        <rect key="frame" x="0.0" y="28" width="240" height="46"/>
-                                                        <autoresizingMask key="autoresizingMask"/>
-                                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fsw-yO-6Ka" id="6sF-XJ-Adr">
-                                                            <rect key="frame" x="0.0" y="0.0" width="240" height="46"/>
-                                                            <autoresizingMask key="autoresizingMask"/>
-                                                            <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XYl-gC-gOb">
-                                                                    <rect key="frame" x="15" y="13" width="210" height="20"/>
-                                                                    <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
-                                                                    <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="calibratedWhite"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
-                                                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IO9-cu-Mfd">
-                                                                    <rect key="frame" x="0.0" y="45" width="242" height="1"/>
-                                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                                                    <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
-                                                                </view>
-                                                            </subviews>
-                                                            <constraints>
-                                                                <constraint firstAttribute="trailingMargin" secondItem="XYl-gC-gOb" secondAttribute="trailing" id="Mmf-Ic-XiM"/>
-                                                                <constraint firstItem="XYl-gC-gOb" firstAttribute="centerX" secondItem="6sF-XJ-Adr" secondAttribute="centerX" id="RPR-w2-u3v"/>
-                                                                <constraint firstItem="XYl-gC-gOb" firstAttribute="centerY" secondItem="6sF-XJ-Adr" secondAttribute="centerY" id="S07-SJ-lF6"/>
-                                                                <constraint firstItem="XYl-gC-gOb" firstAttribute="leading" secondItem="6sF-XJ-Adr" secondAttribute="leadingMargin" id="tot-Ux-Udk"/>
-                                                            </constraints>
-                                                        </tableViewCellContentView>
-                                                        <connections>
-                                                            <outlet property="countryName" destination="XYl-gC-gOb" id="IwK-Il-Zgu"/>
-                                                        </connections>
-                                                    </tableViewCell>
-                                                </prototypes>
-                                            </tableView>
-                                        </subviews>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <constraints>
-                                            <constraint firstItem="4m6-5l-ae2" firstAttribute="leading" secondItem="g6j-w4-Icj" secondAttribute="leading" id="BO2-TY-OmD"/>
-                                            <constraint firstAttribute="trailing" secondItem="4m6-5l-ae2" secondAttribute="trailing" id="K07-qc-kIc"/>
-                                            <constraint firstAttribute="bottom" secondItem="4m6-5l-ae2" secondAttribute="bottom" id="et5-KY-srx"/>
-                                            <constraint firstItem="4m6-5l-ae2" firstAttribute="top" secondItem="g6j-w4-Icj" secondAttribute="top" id="ew7-rd-JJH"/>
-                                        </constraints>
-                                    </view>
+                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="leb-12-FU9" customClass="CountryPicker" customModule="CountryPicker">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="216"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </pickerView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CFK-Bw-BLZ" customClass="BorderView">
-                                        <rect key="frame" x="0.0" y="240" width="240" height="50"/>
+                                        <rect key="frame" x="67.5" y="240" width="240" height="50"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HRL-Rz-1gr">
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HRL-Rz-1gr">
                                                 <rect key="frame" x="0.0" y="0.0" width="240" height="50"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="20"/>
                                                 <state key="normal" title="Cancel"/>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstItem="HRL-Rz-1gr" firstAttribute="top" secondItem="CFK-Bw-BLZ" secondAttribute="top" id="67g-N6-Vi7"/>
-                                            <constraint firstAttribute="bottom" secondItem="HRL-Rz-1gr" secondAttribute="bottom" id="LWN-wX-y2m"/>
-                                            <constraint firstAttribute="trailing" secondItem="HRL-Rz-1gr" secondAttribute="trailing" id="Nly-Ha-9zB"/>
-                                            <constraint firstItem="HRL-Rz-1gr" firstAttribute="leading" secondItem="CFK-Bw-BLZ" secondAttribute="leading" id="PJv-Xc-rzE"/>
-                                            <constraint firstAttribute="height" constant="50" id="nty-OQ-0Jm"/>
+                                            <constraint firstAttribute="height" constant="50" id="REH-aw-fhD"/>
+                                            <constraint firstAttribute="width" constant="240" id="oxL-yz-SWi"/>
                                         </constraints>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="g6j-w4-Icj" secondAttribute="bottom" constant="60" id="9xs-ku-3EA"/>
-                                    <constraint firstAttribute="trailing" secondItem="g6j-w4-Icj" secondAttribute="trailing" id="CNB-8L-WMw"/>
-                                    <constraint firstAttribute="width" constant="240" id="Div-Kj-guw"/>
-                                    <constraint firstAttribute="trailing" secondItem="CFK-Bw-BLZ" secondAttribute="trailing" id="M57-GZ-rDk"/>
-                                    <constraint firstAttribute="bottom" secondItem="CFK-Bw-BLZ" secondAttribute="bottom" id="bhb-eB-Vca"/>
-                                    <constraint firstItem="CFK-Bw-BLZ" firstAttribute="leading" secondItem="lie-CS-pFP" secondAttribute="leading" id="dWK-jW-nWL"/>
-                                    <constraint firstAttribute="height" constant="290" id="nt5-l8-rGn"/>
-                                    <constraint firstItem="g6j-w4-Icj" firstAttribute="leading" secondItem="lie-CS-pFP" secondAttribute="leading" id="r1o-rs-usN"/>
-                                    <constraint firstItem="g6j-w4-Icj" firstAttribute="top" secondItem="lie-CS-pFP" secondAttribute="top" id="yTe-ky-rH5"/>
+                                    <constraint firstItem="leb-12-FU9" firstAttribute="leading" secondItem="lie-CS-pFP" secondAttribute="leading" id="2fA-vc-RfI"/>
+                                    <constraint firstItem="CFK-Bw-BLZ" firstAttribute="top" secondItem="leb-12-FU9" secondAttribute="bottom" constant="24" id="5U5-ZO-u6e"/>
+                                    <constraint firstAttribute="trailing" secondItem="leb-12-FU9" secondAttribute="trailing" id="QQ7-zf-iF6"/>
+                                    <constraint firstAttribute="bottom" secondItem="CFK-Bw-BLZ" secondAttribute="bottom" id="YCc-mL-bFR"/>
+                                    <constraint firstItem="CFK-Bw-BLZ" firstAttribute="centerX" secondItem="lie-CS-pFP" secondAttribute="centerX" id="fM9-xW-etd"/>
+                                    <constraint firstItem="leb-12-FU9" firstAttribute="top" secondItem="lie-CS-pFP" secondAttribute="top" id="unk-1e-ghV"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -583,12 +537,12 @@ of you before you event extend your hand.</string>
                             <constraint firstItem="KvT-g8-sJ0" firstAttribute="leading" secondItem="el7-dz-Cbf" secondAttribute="leading" constant="20" id="2MC-Mq-R8R"/>
                             <constraint firstItem="OgB-Qb-XVO" firstAttribute="top" secondItem="ZkA-qC-BlN" secondAttribute="bottom" constant="10" id="2pr-f7-g5s"/>
                             <constraint firstItem="nQA-Gl-FH0" firstAttribute="centerX" secondItem="el7-dz-Cbf" secondAttribute="centerX" id="6X9-F6-U8K"/>
+                            <constraint firstItem="lie-CS-pFP" firstAttribute="centerY" secondItem="el7-dz-Cbf" secondAttribute="centerY" id="6yz-fu-094"/>
                             <constraint firstItem="rdP-jq-Fgc" firstAttribute="width" secondItem="el7-dz-Cbf" secondAttribute="width" id="8lW-KR-6ZN"/>
+                            <constraint firstItem="lie-CS-pFP" firstAttribute="width" secondItem="el7-dz-Cbf" secondAttribute="width" id="AKN-dY-cEx"/>
                             <constraint firstItem="iHq-ze-UqZ" firstAttribute="top" secondItem="lx1-Rd-irx" secondAttribute="bottom" constant="5" id="BoO-UL-hZB"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="iHq-ze-UqZ" secondAttribute="trailing" id="BzZ-el-QJb"/>
                             <constraint firstItem="Ypp-4b-V6w" firstAttribute="bottom" secondItem="QF9-N8-0bz" secondAttribute="bottom" constant="15" id="G9P-0w-Hvz"/>
                             <constraint firstItem="EP8-Z4-fVN" firstAttribute="leading" secondItem="el7-dz-Cbf" secondAttribute="leading" id="IXR-XD-MMr"/>
-                            <constraint firstItem="lie-CS-pFP" firstAttribute="centerY" secondItem="el7-dz-Cbf" secondAttribute="centerY" id="Qgl-I8-s0M"/>
                             <constraint firstItem="rdP-jq-Fgc" firstAttribute="top" secondItem="nQA-Gl-FH0" secondAttribute="bottom" id="S0s-L9-Fe6"/>
                             <constraint firstItem="iHq-ze-UqZ" firstAttribute="centerX" secondItem="el7-dz-Cbf" secondAttribute="centerX" id="SOO-jd-WfA"/>
                             <constraint firstAttribute="trailing" secondItem="EP8-Z4-fVN" secondAttribute="trailing" id="UZd-7F-ptV"/>
@@ -604,7 +558,7 @@ of you before you event extend your hand.</string>
                             <constraint firstItem="OgB-Qb-XVO" firstAttribute="leading" secondItem="el7-dz-Cbf" secondAttribute="leadingMargin" id="ffW-1k-Xgu"/>
                             <constraint firstItem="ZkA-qC-BlN" firstAttribute="top" secondItem="KvT-g8-sJ0" secondAttribute="bottom" constant="12" id="i5b-r7-5sB"/>
                             <constraint firstItem="iHq-ze-UqZ" firstAttribute="leading" secondItem="el7-dz-Cbf" secondAttribute="leadingMargin" id="kep-lw-vAh"/>
-                            <constraint firstItem="lie-CS-pFP" firstAttribute="centerX" secondItem="el7-dz-Cbf" secondAttribute="centerX" id="mbm-4J-mxZ"/>
+                            <constraint firstItem="lie-CS-pFP" firstAttribute="centerX" secondItem="el7-dz-Cbf" secondAttribute="centerX" id="lhC-E1-sZi"/>
                             <constraint firstAttribute="trailing" secondItem="KvT-g8-sJ0" secondAttribute="trailing" constant="20" id="nHG-Hb-I2K"/>
                             <constraint firstItem="App-TI-nkg" firstAttribute="height" secondItem="el7-dz-Cbf" secondAttribute="height" multiplier="0.142" id="nrd-ZP-g5C"/>
                             <constraint firstItem="QF9-N8-0bz" firstAttribute="top" secondItem="OgB-Qb-XVO" secondAttribute="bottom" id="o2Q-dH-XRr"/>
@@ -623,6 +577,11 @@ of you before you event extend your hand.</string>
                     <navigationItem key="navigationItem" id="gzy-La-5tE"/>
                     <nil key="simulatedStatusBarMetrics"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="countryPickerParent" destination="lie-CS-pFP" id="LA0-Lm-BYg"/>
+                        <outlet property="picker" destination="leb-12-FU9" id="CkQ-Su-TYn"/>
+                        <outlet property="showCountryButtonOutlet" destination="td1-Wq-rD4" id="FFO-rV-QcI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="imf-1J-d6l" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
