--- a/Wizcard/Wizcard/OnBoarding/Base.lproj/Onboarding.storyboard
+++ b/Wizcard/Wizcard/OnBoarding/Base.lproj/Onboarding.storyboard
@@ -53,7 +53,7 @@
                                 <color key="pageIndicatorTintColor" red="0.96862745100000003" green="0.96470588239999999" blue="0.94901960780000005" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="currentPageIndicatorTintColor" red="0.094117647060000004" green="0.63137254899999995" blue="0.74509803919999995" alpha="1" colorSpace="calibratedRGB"/>
                             </pageControl>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p3h-K4-98z">
+                            <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p3h-K4-98z" customClass="RoundableButton" customModule="Wizcard" customModuleProvider="target">
                                 <rect key="frame" x="16" y="550" width="343" height="50"/>
                                 <color key="backgroundColor" red="0.094117647060000004" green="0.63137254899999995" blue="0.74509803919999995" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -63,6 +63,9 @@
                                 <state key="normal" title="DONE">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="round" value="YES"/>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="helpButtonClicked:" destination="zQe-mB-BUg" eventType="touchUpInside" id="7ap-Mm-C6m"/>
                                 </connections>
@@ -74,7 +77,7 @@
                                     <color key="titleColor" red="0.60784313729999995" green="0.60784313729999995" blue="0.60784313729999995" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="skipButtonClicked:" destination="zQe-mB-BUg" eventType="touchUpInside" id="I13-hZ-VQB"/>
+                                    <action selector="helpButtonClicked:" destination="zQe-mB-BUg" eventType="touchUpInside" id="7zt-8s-zEA"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -99,6 +102,8 @@
                     </view>
                     <navigationItem key="navigationItem" id="0et-st-526"/>
                     <connections>
+                        <outlet property="helpButtonOutlet" destination="p3h-K4-98z" id="n9n-gK-3ug"/>
+                        <outlet property="pageController" destination="DZF-0Y-esa" id="rNq-it-sll"/>
                         <outlet property="pageViewParentViewOutlet" destination="62d-nW-hYa" id="AKF-ay-esY"/>
                     </connections>
                 </viewController>
@@ -330,7 +335,7 @@ of you before you event extend your hand.</string>
                                 <rect key="frame" x="0.0" y="335" width="375" height="332"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Explore" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I09-9V-CZG">
-                                <rect key="frame" x="187" y="592" width="78" height="27"/>
+                                <rect key="frame" x="189" y="592" width="76" height="27"/>
                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="23"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -339,13 +344,13 @@ of you before you event extend your hand.</string>
                                 <rect key="frame" x="32" y="50" width="112" height="95"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WIZCARD" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d8q-Il-UL9">
-                                <rect key="frame" x="32" y="165" width="219" height="56"/>
+                                <rect key="frame" x="32" y="165" width="207" height="56"/>
                                 <fontDescription key="fontDescription" name="Roboto-Light" family="Roboto" pointSize="48"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Get more out of evert event" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hMk-dZ-JyV">
-                                <rect key="frame" x="32" y="216" width="208.5" height="20"/>
+                                <rect key="frame" x="32" y="216" width="205.5" height="20"/>
                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -494,12 +499,12 @@ of you before you event extend your hand.</string>
                                 <rect key="frame" x="16" y="411" width="343" height="216"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <connections>
-                                    <segue destination="AO9-Bb-P6c" kind="embed" id="bNA-c5-Xlx"/>
+                                    <segue destination="AO9-Bb-P6c" kind="embed" identifier="pageSeque" id="bNA-c5-Xlx"/>
                                 </connections>
                             </containerView>
                             <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="Ypp-4b-V6w">
                                 <rect key="frame" x="168" y="605" width="39" height="37"/>
-                                <color key="pageIndicatorTintColor" red="0.96862745100000003" green="0.96470588239999999" blue="0.94901960780000005" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="pageIndicatorTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="currentPageIndicatorTintColor" red="0.094117647060000004" green="0.63137254899999995" blue="0.74509803919999995" alpha="1" colorSpace="calibratedRGB"/>
                             </pageControl>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lie-CS-pFP">
@@ -611,6 +616,7 @@ of you before you event extend your hand.</string>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="countryPickerParent" destination="lie-CS-pFP" id="LA0-Lm-BYg"/>
+                        <outlet property="pageControl" destination="Ypp-4b-V6w" id="lQu-Av-tWF"/>
                         <outlet property="picker" destination="leb-12-FU9" id="CkQ-Su-TYn"/>
                         <outlet property="showCountryButtonOutlet" destination="td1-Wq-rD4" id="FFO-rV-QcI"/>
                     </connections>
@@ -622,7 +628,7 @@ of you before you event extend your hand.</string>
         <!--Login Screen Slider View Pager-->
         <scene sceneID="nSb-1C-ZDf">
             <objects>
-                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="pageCurl" navigationOrientation="horizontal" spineLocation="min" id="AO9-Bb-P6c" customClass="LoginScreenSliderViewPager" customModule="Wizcard" customModuleProvider="target" sceneMemberID="viewController"/>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="AO9-Bb-P6c" customClass="LoginScreenSliderViewPager" customModule="Wizcard" customModuleProvider="target" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V4u-Wt-3dW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1023" y="780"/>
@@ -652,7 +658,6 @@ of you before you event extend your hand.</string>
                     </view>
                     <connections>
                         <outlet property="imageView" destination="6Zp-oc-mHJ" id="aGU-wn-eH5"/>
-                        <outlet property="imageViewController" destination="6Zp-oc-mHJ" id="4UG-fs-GBH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PSz-vM-ax5" userLabel="First Responder" sceneMemberID="firstResponder"/>
